--- a/client/src/shared/shared-components/header/header.css
+++ b/client/src/shared/shared-components/header/header.css
@@ -62,3 +62,14 @@
         opacity: 100;
     }
 }
+
+.notification-add-user {
+    width: 1.5rem;
+    height: 1.5rem;
+    font-size: 14px;
+    padding-left: 8px;
+    padding-top: 1px;
+    right: 31.5rem;
+    position: absolute;
+    top: 2.2rem;
+}
